Updated test cases for Controller latyer