@@ -1,9 +1,11 @@
 package com.srnrit.BMS.controller;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
@@ -11,7 +13,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -28,13 +30,14 @@ import com.srnrit.BMS.dto.CategoryResponseDTO;
 import com.srnrit.BMS.dto.UpdateCategoryRequestDTO;
 import com.srnrit.BMS.service.ICategoryService;
 
-@WebMvcTest(CategoryController.class) // Loads only CategoryController for testing
+@WebMvcTest(CategoryController.class)
 public class CategoryControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
+    @SuppressWarnings("removal")
+	@MockBean
     private ICategoryService categoryService;
 
     @Autowired
@@ -52,7 +55,7 @@ public class CategoryControllerTest {
         categoryResponseDTO.setCategoryName("Electronics");
     }
 
-    //  Test for Adding a Category (Success)
+    // Positive Test: Add Category
     @Test
     void testAddCategory_Success() throws Exception {
         when(categoryService.addCategoryWithProducts(any(CategoryRequestDTO.class)))
@@ -67,58 +70,84 @@ public class CategoryControllerTest {
         verify(categoryService, times(1)).addCategoryWithProducts(any(CategoryRequestDTO.class));
     }
 
-    //  Test for Getting All Categories (Success)
+    // Negative Test: Add Category with Invalid Data
+    @Test
+    void testAddCategory_Failure_InvalidData() throws Exception {
+        categoryRequestDTO.setCategoryName(""); // Invalid name
+
+        mockMvc.perform(post("/category/addCategoryWithProducts")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(categoryRequestDTO)))
+                .andExpect(status().isBadRequest());
+    }
+
+    // Positive Test: Get All Categories
     @Test
     void testGetAllCategories_Success() throws Exception {
-        List<CategoryResponseDTO> categories = Arrays.asList(categoryResponseDTO);
-
-        when(categoryService.getAllCategory()).thenReturn(categories);
+        when(categoryService.getAllCategory()).thenReturn(List.of(categoryResponseDTO));
 
         mockMvc.perform(get("/category/allCategories"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.size()").value(1))
                 .andExpect(jsonPath("$[0].categoryName").value("Electronics"));
-
-        verify(categoryService, times(1)).getAllCategory();
     }
 
-    // Test for Getting Category by ID (Success)
+    // Negative Test: Get All Categories - No Data Found
+    @Test
+    void testGetAllCategories_Failure_NoData() throws Exception {
+        when(categoryService.getAllCategory()).thenReturn(Collections.emptyList());
+
+        mockMvc.perform(get("/category/allCategories"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.size()").value(0));
+    }
+
+    // Positive Test: Get Category by ID
     @Test
     void testFindCategoryById_Success() throws Exception {
         when(categoryService.findCategoryByCategoryId("123")).thenReturn(categoryResponseDTO);
 
-        mockMvc.perform(get("/category/categoryById/123"))
+        mockMvc.perform(get("/category/categoryById").param("categoryId", "123"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.categoryName").value("Electronics"));
-
-        verify(categoryService, times(1)).findCategoryByCategoryId("123");
     }
 
-    // Test for Updating a Category (Success)
+    // Negative Test: Get Category by ID - Not Found
+    @Test
+    void testFindCategoryById_Failure_NotFound() throws Exception {
+        when(categoryService.findCategoryByCategoryId("999")).thenReturn(null);
+
+        mockMvc.perform(get("/category/categoryById").param("categoryId", "999"))
+                .andExpect(status().isNotFound());
+    }
+
+    // Positive Test: Update Category
     @Test
     void testUpdateCategory_Success() throws Exception {
-        UpdateCategoryRequestDTO categoryRequestDTO = new UpdateCategoryRequestDTO();
-        categoryRequestDTO.setCategoryId("123");
-        categoryRequestDTO.setCategoryName("UpdatedName");
+        UpdateCategoryRequestDTO updateRequest = new UpdateCategoryRequestDTO();
+        updateRequest.setCategoryId("123");
+        updateRequest.setCategoryName("UpdatedName");
 
-        when(categoryService.updateCategory("123", "UpdatedName")).thenReturn("Category updated successfully");
+        when(categoryService.updateCategory("123", "UpdatedName"))
+                .thenReturn("Category updated successfully");
+
         mockMvc.perform(put("/category/updateCategoryById")
-                .contentType(MediaType.APPLICATION_JSON)  
-                .content(asJsonString(categoryRequestDTO))) 
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(updateRequest)))
                 .andExpect(status().isOk())
                 .andExpect(content().string("Category updated successfully"));
-
-        verify(categoryService, times(1)).updateCategory("123", "UpdatedName");
     }
 
-    private String asJsonString(final Object obj) {
-        try {
-            ObjectMapper objectMapper = new ObjectMapper();
-            return objectMapper.writeValueAsString(obj);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+    // Negative Test: Update Category - Invalid Data
+    @Test
+    void testUpdateCategory_Failure_InvalidData() throws Exception {
+        UpdateCategoryRequestDTO updateRequest = new UpdateCategoryRequestDTO();
+        updateRequest.setCategoryId("123");
+        updateRequest.setCategoryName(""); // Invalid name
+
+        mockMvc.perform(put("/category/updateCategoryById")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(updateRequest)))
+                .andExpect(status().isBadRequest());
     }
-
-
 }
